--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,9 @@ yarn_mappings=25w14craftmine+build.5
 loader_version=0.16.12
 
 # Mod Properties
-mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
+mod_version=0.1.0-beta
+maven_group=com.chainswordcs
+archives_base_name=craftminetweaks
 
 # Dependencies
 # Fabric API
